compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__label_shorthand_in_call_requires_v1_4.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub record Wibble { Wibble(wibble: Int) }\n\npub fn main() {\n  let wibble = 1\n  Wibble(wibble:)\n}\n"
---
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:6:10
  │
6 │   Wibble(wibble:)
  │          ^^^^^^^ This requires a Rakun version >= 1.4.0

The label shorthand syntax was introduced in version v1.4.0. But the Rakun
version range specified in your `rakun.toml` would allow this code to run
on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.4.0"
