compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__missing_utf_8_option_in_bit_array_pattern_segment_requires_v1_5.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main(a) {\n  case a {\n    <<\"hello\">> -> Nil\n    _ -> Nil\n  }\n}\n"
---
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:4:7
  │
4 │     <<"hello">> -> Nil
  │       ^^^^^^^ This requires a Rakun version >= 1.5.0

The ability to omit the `utf8` annotation for string segments was
introduced in version v1.5.0. But the Rakun version range specified in
your `rakun.toml` would allow this code to run on an earlier version like
v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.5.0"
