compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__pattern_matching_on_literal_empty_list.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1109
expression: "pub fn main() {\n        case [] {\n            _ -> Nil\n        }\n      }"
---
----- SOURCE CODE
pub fn main() {
        case [] {
            _ -> Nil
        }
      }

----- WARNING
warning: Match on a literal value
  ┌─ /src/warning/wrn.rakun:2:14
  │
2 │         case [] {
  │              ^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
