compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__pattern_matching_on_literal_float.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub record Wibble { Wibble }\npub fn main() {\n  case 1.0 {\n    _ -> Nil\n  }\n}"
---
warning: Match on a literal value
  ┌─ /src/warning/wrn.rakun:4:8
  │
4 │   case 1.0 {
  │        ^^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
