compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__pattern_matching_on_literal_list_with_tail.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n        case [1, 2, ..[]] {\n            _ -> Nil\n        }\n      }"
---
----- SOURCE CODE
pub fn main() {
        case [1, 2, ..[]] {
            _ -> Nil
        }
      }

----- WARNING
warning: Redundant list
  ┌─ /src/warning/wrn.rakun:2:14
  │
2 │         case [1, 2, ..[]] {
  │              ^^^^^^^^^^^^ You can remove this list wrapper

Instead of building a list and matching on it, you can match on its
contents directly.
A case expression can take multiple subjects separated by commas like this:

    case one_subject, another_subject {
      _, _ -> todo
    }

See: https://tour.rakun.run/flow-control/multiple-subjects/
